Update setupInvoice